Complete backend API functionality
Include user routes and gym routes

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-api-template",
+  "name": "mass-martial-arts",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
