Changed name to mass-martial-arts-api

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mass-martial-arts",
+  "name": "mass-martial-arts-api",
   "version": "0.0.1",
   "description": "",
   "main": "server.js",
